third_party/rust/chromium_crates_io/vendor/quote-v1/tests/ui/not-repeatable.stderr
error[E0599]: the method `quote_into_iter` exists for struct `Ipv4Addr`, but its trait bounds were not satisfied
 --> tests/ui/not-repeatable.rs:7:13
  |
3 | struct Ipv4Addr;
  | --------------- method `quote_into_iter` not found for this struct because it doesn't satisfy `Ipv4Addr: Iterator`, `Ipv4Addr: ToTokens`, `Ipv4Addr: quote::__private::ext::RepIteratorExt` or `Ipv4Addr: quote::__private::ext::RepToTokensExt`
...
7 |     let _ = quote! { #(#ip)* };
  |             ^^^^^^^^^^^^^^^^^^ method cannot be called on `Ipv4Addr` due to unsatisfied trait bounds
  |
  = note: the following trait bounds were not satisfied:
          `Ipv4Addr: Iterator`
          which is required by `Ipv4Addr: quote::__private::ext::RepIteratorExt`
          `&Ipv4Addr: Iterator`
          which is required by `&Ipv4Addr: quote::__private::ext::RepIteratorExt`
          `Ipv4Addr: ToTokens`
          which is required by `Ipv4Addr: quote::__private::ext::RepToTokensExt`
          `&mut Ipv4Addr: Iterator`
          which is required by `&mut Ipv4Addr: quote::__private::ext::RepIteratorExt`
note: the traits `Iterator` and `ToTokens` must be implemented
 --> $RUST/core/src/iter/traits/iterator.rs
  |
  | pub trait Iterator {
  | ^^^^^^^^^^^^^^^^^^
  |
 ::: src/to_tokens.rs
  |
  | pub trait ToTokens {
  | ^^^^^^^^^^^^^^^^^^
  = help: items from traits can only be used if the trait is implemented and in scope
  = note: the following traits define an item `quote_into_iter`, perhaps you need to implement one of them:
          candidate #1: `quote::__private::ext::RepAsIteratorExt`
          candidate #2: `quote::__private::ext::RepIteratorExt`
          candidate #3: `quote::__private::ext::RepToTokensExt`
  = note: this error originates in the macro `$crate::quote_bind_into_iter` which comes from the expansion of the macro `quote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0282]: type annotations needed
 --> tests/ui/not-repeatable.rs:7:13
  |
7 |     let _ = quote! { #(#ip)* };
  |             ^^^^^^^^^^^^^^^^^^ cannot infer type
  |
  = note: this error originates in the macro `$crate::quote_bind_next_or_break` which comes from the expansion of the macro `quote` (in Nightly builds, run with -Z macro-backtrace for more info)
